--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,13 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
-# For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
-# company_name = nike
-
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+lib_name = FireHR
+user = mnpinto
+description = High-resolution burned areas using Sentinel-2 data
+keywords = Burned Areas, Wildfires, Sentinel-2, VIIRS, Deep Learning
+author = Miguel Pinto
+author_email = mnpinto@fc.ul.pt
+copyright = Miguel Pinto
 branch = master
 version = 0.0.1
 min_python = 3.6
@@ -25,9 +21,10 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = 
+requirements = earthengine-api banet fastai
 # Optional. Same format as setuptools console_scripts
-# console_scripts = 
+console_scripts = 
+    firehr_from_banet_events=FireHR.cli:firehr_from_banet_events
 # Optional. Same format as setuptools dependency-links
 # dep_links = 
 
@@ -37,7 +34,7 @@ status = 2
 ###
 
 # Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
-nbs_path = .
+nbs_path = nbs
 doc_path = docs
 
 # Whether to look for library notebooks recursively in the `nbs_path` dir
