--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ jobs:
       with:
         python-version: '3.6'
         architecture: 'x64'
+    - name: Install libhdf4-dev
+      run: |
+        sudo apt install -y libhdf4-dev
     - name: Install the library
       run: |
         pip install nbdev jupyter
