--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,4 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified
 host = github
 lib_name = FireHR
 user = mnpinto
@@ -9,64 +8,23 @@ author = Miguel Pinto
 author_email = mnpinto@fc.ul.pt
 copyright = Miguel Pinto
 branch = master
-version = 0.0.1
+version = 0.0.2
 min_python = 3.6
 audience = Developers
 language = English
-# Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = False
-# Add licenses and see current list in `setup.py`
 license = apache2
-# From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
 status = 2
-
-# Optional. Same format as setuptools requirements
 requirements = earthengine-api banet fastai
-# Optional. Same format as setuptools console_scripts
 console_scripts = 
-    firehr_from_banet_events=FireHR.cli:firehr_from_banet_events
-# Optional. Same format as setuptools dependency-links
-# dep_links = 
-
-###
-# You probably won't need to change anything under here,
-#   unless you have some special requirements
-###
-
-# Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
+	firehr_from_banet_events=FireHR.cli:firehr_from_banet_events
 nbs_path = nbs
 doc_path = docs
-
-# Whether to look for library notebooks recursively in the `nbs_path` dir
 recursive = False
-
-# Anything shown as '%(...)s' is substituted with that setting automatically
-doc_host =  https://%(user)s.github.io
-#For Enterprise Git pages use:  
-#doc_host = https://pages.github.%(company_name)s.com.  
-
-
-doc_baseurl = /%(lib_name)s/
-# For Enterprise Github pages docs use:
-# doc_baseurl = /%(repo_name)s/%(lib_name)s/
-
-git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
-# For Enterprise Github use:
-#git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
-
-
-
-lib_path = %(lib_name)s
-title = %(lib_name)s
-
-#Optional advanced parameters
-#Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
-#monospace_docstrings = False
-#Test flags: introduce here the test flags you want to use separated by |
+doc_host = https://mnpinto.github.io
+doc_baseurl = /FireHR/
+git_url = https://github.com/mnpinto/FireHR/tree/master/
+lib_path = FireHR
+title = FireHR
 tst_flags = local
-#Custom sidebar: customize sidebar.json yourself for advanced sidebars (False/True)
-#custom_sidebar = 
-#Cell spacing: if you want cell blocks in code separated by more than one new line
-#cell_spacing = 
-#Custom jekyll styles: if you want more jekyll styles than tip/important/warning, set them here
-#jekyll_styles = note,warning,tip,important
+
