updated download code, added optional scale_meters parameter to RegionST

--- a/settings.ini
+++ b/settings.ini
@@ -8,14 +8,14 @@ author = Miguel Pinto
 author_email = mnpinto@fc.ul.pt
 copyright = Miguel Pinto
 branch = master
-version = 0.1.1
+version = 0.1.2
 min_python = 3.6
 audience = Developers
 language = English
 custom_sidebar = False
 license = apache2
 status = 2
-requirements = earthengine-api banet==0.6.0 fastai==2.2.7
+requirements = earthengine-api banet==0.6.5 fastai>=2.1.4,<2.2.7 fastprogress
 console_scripts = 
 	firehr_from_banet_events=FireHR.cli:firehr_from_banet_events
 nbs_path = nbs
